Implemented add, edit and delete tracks.

--- a/MusicManager.WpfApp/MusicManager.WpfApp.csproj
+++ b/MusicManager.WpfApp/MusicManager.WpfApp.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Repository.Logic\Repository.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="TrackWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
